ops/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
  labels:
    app: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: angularfrontend
        image: tranvietanh/angularfrontend:2
        ports:
        - containerPort: 5000
